tests/miniJava/neg/000207_mutation.MiniJava
class java { public static String void Main ( String [ ] java ) { { } } }
